== In Git

Annual Subscription
Plan upgrades/downgrades

==  2009-12-29

Turned off forgery protection. Many users were complaining on being logged out.
This only seems to be happening on IE, but with select machines. We've verified
that 2 different machines running the same version of Internet Explorer are having
different experiences using the site. Users were being logged out and unable to
post data via AJAX.

==  2009-12-28

Google Analytics javascript errors

==  2009-12-23

bug fix for credit card validation when signing up as a free member
remove email confirmation
bug fix when signing up for annual billing
copy changes for signup and billing pages

==  2009-12-21

update deployment tag
rails patch for asset_tag problem

==  2009-12-18

Support for annual billing
redesigned billing and registration pages