@@ -2,6 +2,7 @@
 
 Annual Subscription
 Plan upgrades/downgrades
+YogaToday 365 Promo
 
 ==  2009-12-29
 
